syntax = "proto3";
package mint.v1beta1;

option go_package = "github.com/allora-network/allora-chain/x/mint/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

// Params defines the parameters for the x/mint module.
message Params {
  option (amino.name) = "allora-chain/x/mint/Params";

  // type of coin to mint
  string mint_denom = 1;

  // maximum total supply of the coin
  string max_supply = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // ecosystem treasury fraction ideally emitted per unit time
  string f_emission = 3 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // one month exponential moving average smoothing factor, alpha_e in the paper
  string one_month_smoothing_degree = 4 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply is reserved and locked in the ecosystem treasury
  string ecosystem_treasury_percent_of_total_supply = 5 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply that is unlocked and usable in the foundation treasury
  string foundation_treasury_percent_of_total_supply = 6 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply that is unlocked and usable by partipicants at the genesis
  string participants_percent_of_total_supply = 7 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply that is locked in the investors bucket at the genesis
  string investors_percent_of_total_supply = 8 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply that is locked in the team bucket at the genesis
  string team_percent_of_total_supply = 9 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // The capped max monthly percentage yield (like %APY)
  string maximum_monthly_percentage_yield = 10 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // percentage of the total supply that is locked in the preseed investors bucket at the genesis
  string investors_preseed_percent_of_total_supply = 11 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
